# adae

./: .gitignore  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: Docker.yml  Tests.yml
benches/: benches.rs
docker/: Dockerfile
src/: custom_output.rs  engine.rs  lib.rs  test_alloc.rs  wav_recorder.rs
src/engine/: audio_thread.rs  components.rs  config.rs  dropper.rs  error.rs  info.rs  mod.rs  processor.rs  utils.rs
src/engine/components/: audio_clip.rs  audio_clip_reader.rs  audio_clip_store.rs  audio_meter.rs  delay.rs  event_queue.rs  mixer.rs  mixer_track.rs  mixing.rs  mod.rs  parameter.rs  stored_audio_clip.rs  test_tone.rs  timeline.rs  track.rs  utils.rs
src/engine/components/timeline/: audio_clip.rs  audio_clip_store.rs  mod.rs  timeline_clip.rs  timestamp.rs  track.rs
src/engine/traits/: component.rs  mod.rs  source.rs
src/engine/utils/: dropper.rs  key_generator.rs  mod.rs  rbtree_node.rs  remote_push.rs  ringbuffer.rs
test_files/: 22050 L5 16-bit.flac  44100 L5 16-bit.flac  44100 Q160 [unsupported].m4a  48000 L5 16-bit.flac
tests/: audio_clips.rs  audio_tracks.rs  integrations_test.rs  mixer_tracks.rs  normal_use.rs  stored_audio_clips.rs  timeline.rs
tests/utils/: mod.rs
