[package]
name = "adae"
version = "0.1.0"
edition = "2021"
exclude = [".gitignore", "tests", "test_files"]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpal = "0.15.2"
atomicbox = "0.4.0"
ringbuf = "0.3.3"
hound = { version = "3.5.0", optional = true }
symphonia = { version = "0.5.3", features = ["mp3"]}
num-traits = "0.2.15"
intrusive-collections = "0.9.5"
ouroboros = "0.17.0"
rubato = "0.14.1"

[dev-dependencies]
# Tests may want to output audio for debugging purposes
hound = "3.5.0"

[features]
# Record output for debug purposes
record_output = ["hound"]

# Print all debug info to custom function
custom_debug_output = []
