[package]
name = "adae"
version = "0.1.0"
license = "MIT"
authors = ["Holger Dal Mogensen"]
edition = "2021"
include = ["resources", "src", "Cargo.toml", "LICENSE","README.md"]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpal = "0.15.2"
ringbuf = "0.3.3"
hound = { version = "3.5.0", optional = true }
symphonia = { version = "0.5.3", features = ["mp3"] }
num-traits = "0.2.15"
intrusive-collections = "0.9.6"
rubato = "0.14.1"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }
# Tests may want to output audio for debugging purposes
hound = "3.5.0"

[features]
# Record output for debug purposes
record_output = ["hound"]

# Print all debug info to custom function
custom_debug_output = []

[[bench]]
name = "benches"
harness = false

[profile.bench]
debug = true

# Let cargo bench pass through arguments to criterion
# (https://bheisler.github.io/criterion.rs/book/faq.html#cargo-bench-gives-unrecognized-option-errors-for-valid-command-line-options)
[lib]
bench = false
